--- a/platform/mv3/extension/_locales/fy/messages.json
+++ b/platform/mv3/extension/_locales/fy/messages.json
@@ -232,7 +232,7 @@
     "description": "Label for a checkbox in the options page"
   },
   "findListsPlaceholder": {
-    "message": "Sykje listen",
+    "message": "Listen sykje",
     "description": "Placeholder for the input field used to find lists"
   }
 }
