--- a/src/_locales/hu/messages.json
+++ b/src/_locales/hu/messages.json
@@ -1192,7 +1192,7 @@
     "description": "Button text to navigate to the blocked page"
   },
   "docblockedRedirectPrompt": {
-    "message": "The blocked page wants to redirect to another site. If you choose to proceed, you will navigate directly to: {{url}}",
+    "message": "A blokkolt oldal egy másik webhelyre akarja átirányítani. Ha a folytatást választja, akkor követlenül ide fog navigálni: {{url}}",
     "description": "Text warning about an incoming redirect"
   },
   "cloudPush": {
