--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -1192,7 +1192,7 @@
     "description": "Button text to navigate to the blocked page"
   },
   "docblockedRedirectPrompt": {
-    "message": "被封鎖的頁面想要重新導向至另一個網站。如果您選擇繼續，則會直接前往：{{url}}",
+    "message": "被封鎖的網頁想要重新導向至其他網站。如果您選擇繼續，則會直接前往：{{url}}",
     "description": "Text warning about an incoming redirect"
   },
   "cloudPush": {
